--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ name = "emsigner"
 authors = [
     { name = "Aerele Technologies Private Limited", email = "hello@aerele.in"}
 ]
-description = "Integrating Emudhra emSigner in ERPNext"
+description = "Integrating emSigner in ERPNext"
 requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
 dependencies = [
-	"pycryptodome"
+      "pycryptodome"
     # "frappe~=15.0.0" # Installed and managed by bench.
 ]
 
